--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "css-loader": "^6.7.1",
     "less-loader": "^11.0.0",
     "nanoid": "^4.0.0",
     "pubsub-js": "^1.9.4",
